--- a/app/src/main/res/layout-land/fragment_view_font.xml
+++ b/app/src/main/res/layout-land/fragment_view_font.xml
@@ -30,6 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:textColor="@color/textColor"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_font" />
@@ -173,6 +174,7 @@
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_horizontal"
                 android:textColor="@color/textColor"
+                android:visibility="invisible"
                 android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -180,13 +182,14 @@
 
             <ImageView
                 android:id="@+id/img_font"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="400dp"
+                android:layout_height="600dp"
+                android:layout_marginTop="50dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_nom_font"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:src="@tools:sample/avatars" />
 
             <TextView
@@ -200,7 +203,7 @@
                 android:textColor="@color/textColor"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/img_check"
-                app:layout_constraintTop_toBottomOf="@+id/estatText" />
+                app:layout_constraintTop_toBottomOf="@+id/img_font" />
 
             <TextView
                 android:id="@+id/txt_tipus_font"
@@ -376,6 +379,7 @@
                 android:backgroundTint="#FAB54F"
                 android:drawableLeft="@drawable/ic_problem"
                 android:text="@string/incidencia"
+                android:visibility="invisible"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
