--- a/app/src/main/res/layout/fragment_info_gos.xml
+++ b/app/src/main/res/layout/fragment_info_gos.xml
@@ -11,9 +11,11 @@
         android:id="@+id/txt_titol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="157dp"
+        android:drawableLeft="@drawable/gota_5_small"
+        android:layout_marginStart="125dp"
         android:layout_marginTop="54dp"
         android:layout_marginEnd="157dp"
+        android:gravity="center"
         android:fontFamily="@font/montserrat"
         android:text="@string/fonts_gossos"
         android:textColor="@color/textColor"
