--- a/app/src/main/res/layout/fragment_info_natural.xml
+++ b/app/src/main/res/layout/fragment_info_natural.xml
@@ -9,9 +9,11 @@
 
     <TextView
         android:id="@+id/txt_titol"
+        android:drawableLeft="@drawable/gota_4_small"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="157dp"
+        android:layout_marginStart="125dp"
         android:layout_marginTop="54dp"
         android:layout_marginEnd="157dp"
         android:fontFamily="@font/montserrat"
