--- a/app/src/main/res/layout/fragment_view_font.xml
+++ b/app/src/main/res/layout/fragment_view_font.xml
@@ -163,8 +163,8 @@
 
             <ImageView
                 android:id="@+id/img_font"
-                android:layout_width="277dp"
-                android:layout_height="325dp"
+                android:layout_width="300dp"
+                android:layout_height="400dp"
                 android:layout_marginTop="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
@@ -181,8 +181,8 @@
                 android:text="@string/valoracio_mitjana"
                 android:textColor="@color/textColor"
                 android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/txt_tipus_font"
-                app:layout_constraintTop_toBottomOf="@+id/estatText" />
+                app:layout_constraintTop_toBottomOf="@+id/img_font"
+                app:layout_constraintStart_toStartOf="@+id/txt_tipus_font" />
 
             <TextView
                 android:id="@+id/txt_tipus_font"
@@ -366,6 +366,7 @@
                 android:drawableLeft="@drawable/ic_problem"
                 android:text="@string/incidencia"
                 android:textColor="@color/white"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.52"
@@ -389,6 +390,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:textColor="@color/textColor"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_font" />
