--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -24,7 +24,7 @@
                 android:layout_marginStart="41dp"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/montserrat"
-                android:text="Agraïments:"
+                android:text="@string/agraiments"
                 android:textColor="@color/textColor"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -32,12 +32,13 @@
 
             <TextView
                 android:id="@+id/txt_oat"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="41dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="41dp"
                 android:fontFamily="@font/montserrat"
-                android:text="Grup de treball qualitat i sabor de l'aigua (OAT):"
+                android:text="@string/grupOat"
                 android:textColor="@color/textColor"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +78,7 @@
                 android:layout_marginTop="10dp"
                 android:maxWidth="320dp"
                 android:fontFamily="@font/montserrat"
-                android:text="Beatriz Escribano, Pilar Quintanilla, Juana Martin"
+                android:text="@string/membres_oat"
                 android:textColor="@color/textColor"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_oat" />
@@ -90,7 +91,7 @@
                 android:layout_marginTop="10dp"
                 android:maxWidth="320dp"
                 android:fontFamily="@font/montserrat"
-                android:text="Institut Nicolau Copernic, Esther Sánchez, Catedra Unesco de Sosteniblitat de la UPC, Eva Nogueras i ajuntament de Terrassa."
+                android:text="@string/grup_agraiments"
                 android:textColor="@color/textColor"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_agraiments" />
