Ultimos cambios especificados en la reunión realizados

--- a/app/src/main/res/layout/fragment_view_font.xml
+++ b/app/src/main/res/layout/fragment_view_font.xml
@@ -17,13 +17,12 @@
                 android:id="@+id/imgFontType"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="20dp"
                 android:scaleX="1.25"
                 android:scaleY="1.25"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="@+id/tipus_font_txt"
                 app:layout_constraintStart_toEndOf="@+id/tipus_font_txt"
-                app:layout_constraintTop_toTopOf="@+id/tipus_font_txt" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_testWater" />
 
             <ImageView
                 android:id="@+id/star_transperencia_5"
@@ -90,6 +89,7 @@
                 android:backgroundTint="#00FFFFFF"
                 android:src="@drawable/ic_type"
                 android:textColor="@color/textColor"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@+id/txt_tipus_font"
                 app:layout_constraintEnd_toStartOf="@+id/txt_tipus_font"
                 app:layout_constraintTop_toTopOf="@+id/txt_tipus_font" />
@@ -194,6 +194,7 @@
                 android:text="@string/tipus_font"
                 android:textColor="@color/textColor"
                 android:textSize="20sp"
+                android:visibility="invisible"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_testWater" />
 
@@ -201,12 +202,12 @@
                 android:id="@+id/tipus_font_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="20dp"
                 android:textColor="@color/textColor"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="@+id/txt_tipus_font"
-                app:layout_constraintTop_toBottomOf="@+id/txt_tipus_font" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_testWater" />
 
             <TextView
                 android:id="@+id/txt_titol_informacio"
@@ -366,7 +367,6 @@
                 android:drawableLeft="@drawable/ic_problem"
                 android:text="@string/incidencia"
                 android:textColor="@color/white"
-                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.52"
